[tool.poetry]
name = "safetydance"
version = "0.3.2"
description = "A typesafe system for defining and composing steps."
authors = ["David Charboneau <david@adadabase.com>"]
license = "MIT"
repository = "https://github.com/dcharbon/safetydance.git"
homepage = "https://github.com/dcharbon/safetydance"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
nox = "^2025.2.9"
nox-poetry = "^1.2.0"
jupyter-book = "^1.0.4.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
